
Sample tab
   [Imp] <js> When reading ITI / XI instruments as samples, prefer reading the sample at middle-C rather than the first sample in the file.
   [Fix] <js> Crossfading did not work if a sample only had a sustain loop.
   [Fix] <js> Adding silence at the beginning of the sample only updated the normal loop points, but not the sustain loop points.

Tree view
   [Fix] <js> Do not cycle through tree items when keeping keys pressed while a playable item is focussed (http://bugs.openmpt.org/view.php?id=872).

MOD
   [Fix] <js> MOD: Avoid enabling some ProTracker quirks for files most likely created with ScreamTracker 3 (fixes BASIC001.MOD, tx Borg-).

Other formats
   [Fix] <js> Crashes with malformed files in various formats.

Module cleanup
   [Mod] <js> "Remove unused channels" will no longer remove channels from 4-channel MODs, as a user may typically want such modules to remain ProTracker-compatible (tx eightbitbubsy).

Misc
   [Imp] <js> Channel Manager: Dragging the mouse over buttons now applies the same action to all hovered buttons rather than toggling the action everytime the mouse moves a bit.
   [Imp] <js> Channel Manager: Visual improvements, especially in high-DPI mode.
   [Imp] <js> Various buttons (e.g. pattern editor and sample map) look nicer in high-DPI mode.
   [Imp] <js> DLS: Experimental support for "art2" chunk.
   [Fix] <js> DLS: Embedded soundfonts could not be read in some cases.
   [Fix] <js> SF2: Region coarse-tune was not imported at all.
   [Fix] <js> MIDI Macro dialog is now DPI-aware.


v1.26.05.00 (3 September 2016, revision 7025)
---------------------------------------------
Pattern tab
   [Imp] <js> Show clamped values (or "undefined", depending on the format) for out-of-range channel / global volume parameters in the status bar (http://bugs.openmpt.org/view.php?id=866).
   [Fix] <js> Seeking with sample sync could behave strangely with portamento-ed pingpong-looped samples.